--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,25 +61,26 @@
 
   <footer>
     <hr>
-      <h3>About</h3>
-        <ul>
-          <li><a href="#">About YelpLite</a></li>
-          <li><a href="#">Terms of Service</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-        </ul>
-      <h3>Help</h3>
-        <ul>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Content Guidelines</a></li>
-          <li><a href="#">Contact YelpLite</a></li>
-        </ul>
-      <h3>More</h3>
-        <ul>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Top Searches</a></li>
-        </ul>
-
-      <p>Footer Image</p>
+    <h3>About</h3>
+      <ul>
+        <li><a href="#">About YelpLite</a></li>
+        <li><a href="#">Terms of Service</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+      </ul>
+    <h3>Help</h3>
+      <ul>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Content Guidelines</a></li>
+        <li><a href="#">Contact YelpLite</a></li>
+      </ul>
+    <h3>More</h3>
+      <ul>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Top Searches</a></li>
+      </ul>
+    <div class="footer-image">
+      Insert Footer Image
+    </div>
   </footer>
 </body>
 </html>
