--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
   <li><a href="#">More Cities &raquo;</a></li>
 </ul> -->
 
-<section class="content">
+<section class="home-content">
   <div class="next-review">
     <h1>Your Next Review Awaits</h1>
 
@@ -28,6 +28,7 @@
 
     <%= render partial: 'reviews' %>
   </div>
+
 </section>
 
 <!-- <section class="sidebar">
