--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,2 +1,3 @@
-<div>Review
-  <%= link_to review.business.name, review.business %></div>
+<div>
+  <%= link_to review.business.name, review.business %>
+</div>
