--- a/app/assets/templates/home.jst.ejs
+++ b/app/assets/templates/home.jst.ejs
@@ -1,1 +1,20 @@
-<h1>Home View</h1>
+<section class="content">
+  <div class="next-review">
+    <h1>Your Next Review Awaits</h1>
+
+    <div class="biz-thumb">
+      <div class="user-thumb">
+        <% if business && business.avatar %>
+          <img src="<%= asset_path(business.avatar.url(:thumb)) %>">
+        <% end %>
+      </div>
+    </div>
+    <%= render partial: 'shared/insert_review', locals: { review: Review.new, business: @business } %>
+  </div>
+
+  <div class="recent-activity">
+    <h1>Recent Activity</h1>
+
+    <%= render partial: 'reviews' %>
+  </div>
+</section>
