--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,52 +13,58 @@
         <a href="#">YelpLite</a>
       </h1>
 
-      <form class="search-form" action="<%= search_url %>" method="get">
-        <div class="post-form-input">
-          <label for="find">Find</label>
-          <input type="text" id="find" name="query[find]">
-        </div>
+      <div class="header-middle">
+        <form class="search-form" action="<%= search_url %>" method="get">
+          <div class="post-form-input">
+            <label for="find">Find</label>
+            <input type="text" id="find" name="query[find]">
+          </div>
 
-        <div class="post-form-input">
-          <label for="near">Near</label>
-          <input type="text" id="near" name="query[near]">
-        </div>
+          <div class="post-form-input">
+            <label for="near">Near</label>
+            <input type="text" id="near" name="query[near]">
+          </div>
 
-        <div class="post-form-submit">
-          <input type="submit" id="search-button" value="Search">
-        </div>
-      </form>
+          <div class="post-form-submit">
+            <input type="submit" id="search-button" value="Search">
+          </div>
+        </form>
 
-      <nav class="header-nav">
-        <ul>
-          <li><a href="/">Home</a></li>
+        <nav class="header-nav">
+          <ul>
+            <li><a href="/">Home</a></li>
 
-          <% if current_user %>
+            <% if current_user %>
+              <li><a href="<%= user_url current_user %>">About Me</a></li>
+            <% else %>
+              <li><a href="<%= new_user_url %>">About Me</a></li>
+            <% end %>
+
+            <li><a href="<%= search_url %>">Write a Review</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="header-buttons">
+        <% if current_user %>
+          <div class="header-user-thumb">
+            <% if current_user.avatar %>
+              <img src="<%= asset_path(current_user.avatar.url(:mini)) %>">
+            <% end %>
+          </div>
+          <ul class="header-dropdown">
             <li><a href="<%= user_url current_user %>">About Me</a></li>
-          <% else %>
-            <li><a href="<%= new_user_url %>">About Me</a></li>
-          <% end %>
-
-          <li><a href="<%= search_url %>">Write a Review</a></li>
-        </ul>
-      </nav>
-
-      <% if current_user %>
-        <div class="user-thumb">
-          <% if current_user.avatar %>
-            <img src="<%= asset_path(current_user.avatar.url(:mini)) %>">
-          <% end %>
-        </div>
-        <ul>
-          <li><a href="<%= user_url current_user %>">About Me</a></li>
-          <li><a href="<%= search_url %>">Write a Review</a></li>
-          <li><a href="<%= new_business_url %>">Add a Business</a></li>
-          <li><%= button_to "Log Out", session_url, method: :delete %></li>
-        </ul>
-      <% else %>
-        <a href="<%= new_user_url %>">Sign Up</a>
-        <a href="<%= new_session_url %>">Log In</a>
-      <% end %>
+            <li><a href="<%= search_url %>">Write a Review</a></li>
+            <li><a href="<%= new_business_url %>">Add a Business</a></li>
+            <li><%= button_to "Log Out", session_url, method: :delete %></li>
+          </ul>
+        <% else %>
+          <div class="header-sessions">
+            <a class="header-sign-up" href="<%= new_user_url %>">Sign Up</a>
+            <a class="header-log-in" href="<%= new_session_url %>">Log In</a>
+          </div>
+        <% end %>
+      </div>
     </div>
   </header>
 
