--- a/app/views/shared/_insert_review.html.erb
+++ b/app/views/shared/_insert_review.html.erb
@@ -1,6 +1,6 @@
 <% if business && business.persisted? %>
 
-  <form action="<%= business_reviews_url business %>" method="post">
+  <form class="review-form" action="<%= business_reviews_url business %>" method="post">
     <div class="biz-name"><a href="<%= business_url business %>"><%= business.name %></a></div>
 
     <%= form_token %>
@@ -27,7 +27,7 @@
     <textarea id="review-content" name="review[content]"><%= review.content %></textarea>
 
 <% if business && business.persisted? %>
-    <a href="#">Cancel</a>
+    <a class="cancel" href="#">Cancel</a>
     <input type="submit" class="post-submit" value="Post Review">
   </form>
 <% end %>
