--- a/app/views/shared/_insert_review.html.erb
+++ b/app/views/shared/_insert_review.html.erb
@@ -7,20 +7,19 @@
 
 <% end %>
 
-      <input type="radio" name="review[rating]" id="rating-1" value="1" <%= "checked" if review.rating == 1 %>>
-
-      <input type="radio" name="review[rating]" id="rating-2" value="2" <%= "checked" if review.rating == 2 %>>
-
-      <input type="radio" name="review[rating]" id="rating-3" value="3" <%= "checked" if review.rating == 3 %>>
-
-      <input type="radio" name="review[rating]" id="rating-4" value="4" <%= "checked" if review.rating == 4 %>>
-
-      <input type="radio" name="review[rating]" id="rating-5" value="5" <%= "checked" if review.rating == 5 %>>
-
+      <input type="radio" class="rating-radio" name="review[rating]" id="rating-1" value="1" <%= "checked" if review.rating == 1 %>>
       <label for="rating-1">Cockroaches, Rats, and Things...</label>
+      
+      <input type="radio" class="rating-radio" name="review[rating]" id="rating-2" value="2" <%= "checked" if review.rating == 2 %>>
       <label for="rating-2">Eh, I've had better.</label>
+
+      <input type="radio" class="rating-radio" name="review[rating]" id="rating-3" value="3" <%= "checked" if review.rating == 3 %>>
       <label for="rating-3">Okay.</label>
+      
+      <input type="radio" class="rating-radio" name="review[rating]" id="rating-4" value="4" <%= "checked" if review.rating == 4 %>>
       <label for="rating-4">New favorite place!</label>
+      
+      <input type="radio" class="rating-radio" name="review[rating]" id="rating-5" value="5" <%= "checked" if review.rating == 5 %>>
       <label for="rating-5">Oh baby, that was delicious!</label>
 
     <br>
