--- a/app/views/layouts/backbone.html.erb
+++ b/app/views/layouts/backbone.html.erb
@@ -7,79 +7,108 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header>
-    <p>YelpLite Logo</p>
+  <header class="header">
+    <div class="header-wrap group">
+      <h1 class="header-logo">
+        <a class="no-underline" href="<%= root_url %>">YelpLite</a>
+      </h1>
 
-    <nav>
-      <form action="<%= search_url %>" method="get">
-        <label for="find">Find</label>
-        <input type="text" id="find" name="query[find]">
+      <div class="header-middle">
+        <form class="search-form" action="<%= search_url %>" method="get">
+          <div class="post-form-input">
+            <label for="find">Find</label>
+            <input type="text" id="find" name="query[find]">
+          </div>
 
-        <label for="near">Near</label>
-        <input type="text" id="near" name="query[near]">
+          <div class="post-form-input">
+            <label for="near">Near</label>
+            <input type="text" id="near" name="query[near]">
+          </div>
 
-        <input type="submit" id="search-button" value="Search">
-      </form>
+          <div class="post-form-submit">
+            <input type="submit" id="search-button" value="Search">
+          </div>
+        </form>
 
-      <ul>
-        <li><a href="/">Home</a></li>
+        <nav class="header-nav">
+          <ul>
+            <li><a class="no-underline" href="/">Home</a></li>
 
+            <% if current_user %>
+              <li><a class="no-underline" href="<%= user_url current_user %>">About Me</a></li>
+            <% else %>
+              <li><a class="no-underline" href="<%= new_user_url %>">About Me</a></li>
+            <% end %>
+
+            <li><a class="no-underline" href="<%= search_url %>">Write a Review</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="header-buttons">
         <% if current_user %>
-          <li><a href="<%= user_url current_user %>">About Me</a></li>
+          <div class="header-user-thumb">
+            <% if current_user.avatar %>
+              <img src="<%= asset_path(current_user.avatar.url(:mini)) %>">
+            <% end %>
+          </div>
+          <ul class="header-dropdown">
+            <li><a class="no-underline" href="<%= user_url current_user %>">About Me</a></li>
+            <li><a class="no-underline" href="<%= search_url %>">Write a Review</a></li>
+            <li><a class="no-underline" href="<%= new_business_url %>">Add a Business</a></li>
+            <li><%= button_to "Log Out", session_url, method: :delete %></li>
+          </ul>
         <% else %>
-          <li><a href="<%= new_user_url %>">About Me</a></li>
-        <% end %>
-
-        <li><a href="<%= search_url %>">Write a Review</a></li>
-      </ul>
-    </nav>
-    <% if current_user %>
-      <div class="user-thumb">
-        <% if current_user.avatar %>
-          <img src="<%= asset_path(current_user.avatar.url(:mini)) %>">
+          <div class="header-sessions">
+            <a class="header-sign-up no-underline" href="<%= new_user_url %>">Sign Up</a>
+            <a class="header-log-in" href="<%= new_session_url %>">Log In</a>
+          </div>
         <% end %>
       </div>
-      <ul>
-        <li><a href="<%= user_url current_user %>">About Me</a></li>
-        <li><a href="<%= search_url %>">Write a Review</a></li>
-        <li><a href="<%= new_business_url %>">Add a Business</a></li>
-        <li><%= button_to "Log Out", session_url, method: :delete %></li>
-      </ul>
-    <% else %>
-      <a href="<%= new_user_url %>">Sign Up</a>
-      <a href="<%= new_session_url %>">Log In</a>
-    <% end %>
-    <hr>
+    </div>
   </header>
 
-  <!-- ERRORS and NOTICES -->
-  <% if flash %>
-    <p><%= flash[:errors] %></p>
+  <% if flash[:errors] %>
+    <em><%= render "shared/notices" %></em>
   <% end %>
 
-<%= yield %>
+  <div class="content">
+    <%= yield %>
+  </div>
 
-  <footer>
-    <hr>
-    <h3>About</h3>
-      <ul>
-        <li><a href="#">About YelpLite</a></li>
-        <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-      </ul>
-    <h3>Help</h3>
-      <ul>
-        <li><a href="#">FAQ</a></li>
-        <li><a href="#">Content Guidelines</a></li>
-        <li><a href="#">Contact YelpLite</a></li>
-      </ul>
-    <h3>More</h3>
-      <ul>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Top Searches</a></li>
-      </ul>
-    <div class="footer-image">
-      Insert Footer Image
+  <footer class="footer">
+    <div class="footer-wrap group">
+      <nav class="footer-links">
+        <ul>
+          <li>
+            <h3>About</h3>
+            <ul>
+              <li><a href="#">About YelpLite</a></li>
+              <li><a href="#">Terms of Service</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3>Help</h3>
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Content Guidelines</a></li>
+              <li><a href="#">Contact YelpLite</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3>More</h3>
+            <ul>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Top Searches</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+
+      <div>
+        <%= image_tag "new_footer.png", class: "footer-image"  %>
+      </div>
     </div>
   </footer>
 </body>
