--- a/app/views/pages/root.html.erb
+++ b/app/views/pages/root.html.erb
@@ -1,11 +1,7 @@
 <div id="content"></div>
 
 <script type="application/json" id="bootstrapped-data">
-  {
-    "users": <%= @users.to_json.html_safe %>,
-    "businesses": <%= @businesses.to_json.html_safe %>,
-    "reviews": <%= @reviews.to_json.html_safe %>
-  }
+  <%= render(partial: 'root.json').html_safe %>
 </script>
 
 <script>
