--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
   <div class="recent-activity">
     <h1>Recent Activity</h1>
 
-    <%= render partial: 'reviews' %>
+    <%= render partial: 'reviews/recent_reviews' %>
   </div>
 
 </section>
