--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,7 +48,7 @@
 </section>
 
 <section class="user-reviews">
-  <%= render partial: 'reviews', locals: { user: @user } %>
+  <%= render partial: 'reviews/user_reviews', locals: { user: @user } %>
 </section>
 
 <!-- <section class="followings">
